--- a/index.html
+++ b/index.html
@@ -26,14 +26,37 @@
             font-family: sans-serif;
             font-weight: 600;
         }
-        .button:hover{
+        .button:hover,
+        .button:active{
             cursor: pointer;
             color: red;
             background-color: #fff;
             transition: 0.3s all;
         }
+        input{
+            opacity: 0;
+        }
+        label{
+            width: 30px;
+            height: 30px;
+        }
+        ion-icon{
+            width: 100%;
+            height: 100%;
+        }
+        input:checked + label{
+            color: red;
+            
+        }
+label:hover{
+            cursor: pointer;
+        }
     </style>
 <body>
     <a href="" class="button">subscribe</a>
+    <input id="yeah" type="checkbox">
+<label for="yeah">
+    <ion-icon name="heart-outline"></ion-icon>
+</label>
 </body>
 </html>
