--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="bill-head">billy charges</p>
         <div class="bill-flex-list">
             <p class="list-items color-blue">units consumed</p>
-            <input type="number" class="list-items" id="myUnits" onchange="calcBill()"></input>
+            <input type="number" class="list-items" id="myUnits" onchange="calcBill()" placeholder="Enter Units"></input>
         <p class="list-items color-blue">cost of electricity</p>
         <p class="list-items" id="billCost">0</p>
         <p class="list-items color-blue">meter rent</p>
@@ -57,7 +57,7 @@
         <p class="list-items color-blue">current bill</p>
         <p class="list-items" id="CurrentBill">0</p>
         <p class="list-items color-blue">total fpa</p>
-        <p class="list-items" id="fpa" ></p>
+        <p class="list-items" id="fpa" >0</p>
         <p class="list-items color-blue color-red">payable within due date</p>
         <p class="list-items" id="duedate">0</p>
         <p class="list-items color-blue">l.p. surcharge</p>
