gst and fuel price added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <p class="list-items" id="billCost">0</p>
         <p class="list-items color-blue">meter rent</p>
         <p class="list-items" id="meterRent" >0</p>
+        <p class="list-items color-blue">fuel price adjustment</p>
+        <p class="list-items" id="FuelPrice" >0</p>
         <p class="list-items color-blue">f.c surcharge</p>
         <p class="list-items" id="fSurcharge">0</p>
         <p class="list-items color-blue">total</p>
@@ -40,6 +42,8 @@
         <p class="list-items" id="elecDuty">0</p>
         <p class="list-items color-blue color-coral">tv fee</p>
         <p class="list-items" id="tv">0</p>
+        <p class="list-items color-blue color-coral">gst</p>
+        <p class="list-items" id="gst">0</p>
         <p class="list-items color-blue color-coral">income tax</p>
         <p class="list-items" id="incomeTax">0</p>
         <p class="list-items color-blue color-coral">tax percent</p>
