--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p class="list-items color-blue">units consumed</p>
             <input type="number" class="list-items" id="myUnits" onchange="calcBill()" placeholder="Enter Units"></input>
         <p class="list-items color-blue">cost of electricity</p>
-        <p class="list-items" id="billCost">0</p>
+        <p class="list-items"  id="billCost" >0</p>
         <p class="list-items color-blue">meter rent</p>
         <p class="list-items" id="meterRent" >0</p>
         <p class="list-items color-blue">fuel price adjustment</p>
@@ -32,6 +32,8 @@
         <p class="list-items" id="fSurcharge">0</p>
         <p class="list-items color-blue">total</p>
         <p class="list-items" id="FirstTotal">0</p>
+        <p class="list-items color-blue margintop">Enter code</p>
+    <input type="text" class="list-items margintop" id="Vcode" placeholder="OPTIONAL" onchange="calcBill()" minlength="5" maxlength="5">
     </div>
 </div>
 
@@ -64,6 +66,12 @@
         <p class="list-items" id="fpa" >0</p>
         <p class="list-items color-blue color-red">payable within due date</p>
         <p class="list-items" id="duedate">0</p>
+        <p class="list-items color-blue">discount code</p>
+        <p class="list-items" id="Dcode"></p>
+        <p class="list-items color-blue">discount</p>
+        <p class="list-items" id="discount">0</p>
+        <p class="list-items color-blue">total bill after discount</p>
+        <p class="list-items" id="BillDiscount">0</p>
         <p class="list-items color-blue">l.p. surcharge</p>
         <p class="list-items" id="surcharge">0</p>
         <p class="list-items color-blue color-red">payable after due date</p>
