added discount percent age

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <p class="list-items" id="taxpercent">0</p>
         <p class="list-items color-blue color-coral">total</p>
         <p class="list-items text-bold" id="SecondTotal">0</p>
+        <p class="list-items color-blue color-coral margintop">discount percent</p>
+        <p class="list-items margintop" id="dper">0</p>
     </div>
 </div>
 
