--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
 <div class="bill-container">
     <p class="bill-head">total charges</p>
     <div class="bill-flex-list">
-        <p class="list-items color-blue">arrear/age</p>
-        <p class="list-items">0</p>
         <p class="list-items color-blue">current bill</p>
         <p class="list-items" id="CurrentBill">0</p>
         <p class="list-items color-blue">total fpa</p>
@@ -74,7 +72,7 @@
         <p class="list-items color-blue color-red">payable within due date</p>
         <p class="list-items" id="duedate">0</p>
         <p class="list-items color-blue">discount code</p>
-        <p class="list-items" id="Dcode"></p>
+        <p class="list-items" id="Dcode">0</p>
         <p class="list-items color-blue">discount</p>
         <p class="list-items" id="discount">0</p>
         <p class="list-items color-blue color-red">total bill after discount</p>
